; ModuleID = '/home/carl/AnghaBench/skynet/service-src/extr_service_snlua.c_snlua_create.c'
source_filename = "/home/carl/AnghaBench/skynet/service-src/extr_service_snlua.c_snlua_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snlua = type { i32, i64, i32 }

@MEMORY_WARNING_REPORT = common dso_local global i32 0, align 4
@lalloc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.snlua* @snlua_create() #0 {
  %1 = alloca %struct.snlua*, align 8
  %2 = call %struct.snlua* @skynet_malloc(i32 24)
  store %struct.snlua* %2, %struct.snlua** %1, align 8
  %3 = load %struct.snlua*, %struct.snlua** %1, align 8
  %4 = call i32 @memset(%struct.snlua* %3, i32 0, i32 24)
  %5 = load i32, i32* @MEMORY_WARNING_REPORT, align 4
  %6 = load %struct.snlua*, %struct.snlua** %1, align 8
  %7 = getelementptr inbounds %struct.snlua, %struct.snlua* %6, i32 0, i32 2
  store i32 %5, i32* %7, align 8
  %8 = load %struct.snlua*, %struct.snlua** %1, align 8
  %9 = getelementptr inbounds %struct.snlua, %struct.snlua* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* @lalloc, align 4
  %11 = load %struct.snlua*, %struct.snlua** %1, align 8
  %12 = call i32 @lua_newstate(i32 %10, %struct.snlua* %11)
  %13 = load %struct.snlua*, %struct.snlua** %1, align 8
  %14 = getelementptr inbounds %struct.snlua, %struct.snlua* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.snlua*, %struct.snlua** %1, align 8
  ret %struct.snlua* %15
}

declare dso_local %struct.snlua* @skynet_malloc(i32) #1

declare dso_local i32 @memset(%struct.snlua*, i32, i32) #1

declare dso_local i32 @lua_newstate(i32, %struct.snlua*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
